added login with google

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,10 @@
 </head>
 <body color="gray">
 <h1>Welcome to class :D</h1>
-
+<button onclick="googleLogin()">
+    Login with Google
+</button>
+<script src="login.js"></script>
 
 <div class="top">
     <div class="slide" id="teacher">
@@ -65,13 +68,13 @@
         <video class="grid-item" height="100" width="100" id="localVideo"  muted autoplay playsinline></video>
         <video class="grid-item" height="100" width="100" id="localVideo"  muted autoplay playsinline></video>
         <video class="grid-item" height="100" width="100" id="localVideo"  muted autoplay playsinline></video>
-        <video class="grid-item" height="100" width="100" id="localVideo"  muted autoplay playsinline></video> 
-        <video class="grid-item" height="100" width="100" id="localVideo"  muted autoplay playsinline></video> 
-        <video class="grid-item" height="100" width="100" id="localVideo"  muted autoplay playsinline></video> 
-        <video class="grid-item" height="100" width="100" id="localVideo"  muted autoplay playsinline></video> 
-        <video class="grid-item" height="100" width="100" id="localVideo"  muted autoplay playsinline></video> 
-        <video class="grid-item" height="100" width="100" id="localVideo"  muted autoplay playsinline></video> 
-        <video class="grid-item" height="100" width="100" id="localVideo"  muted autoplay playsinline></video> 
+        <video class="grid-item" height="100" width="100" id="localVideo"  muted autoplay playsinline></video>
+        <video class="grid-item" height="100" width="100" id="localVideo"  muted autoplay playsinline></video>
+        <video class="grid-item" height="100" width="100" id="localVideo"  muted autoplay playsinline></video>
+        <video class="grid-item" height="100" width="100" id="localVideo"  muted autoplay playsinline></video>
+        <video class="grid-item" height="100" width="100" id="localVideo"  muted autoplay playsinline></video>
+        <video class="grid-item" height="100" width="100" id="localVideo"  muted autoplay playsinline></video>
+        <video class="grid-item" height="100" width="100" id="localVideo"  muted autoplay playsinline></video>
       </div>
 </div>
 
@@ -84,11 +87,11 @@
         <span class="mdc-image-list__label">Text label</span>
       </div>
     </li>
-    
+
   </ul>
 
 
-  
+
 <div>
     <span id="currentRoom"></span>
 </div>
