--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class="hostVid" id="teacher">
-        <video height="160" width="210" id="remoteVideo" muted autoplay playsinline></video>
+        <video height="160" width="210" id="localVideo" muted autoplay playsinline></video>
     </div>
 
 </div>
