--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,13 @@
 <body>
 <h1>Welcome to FirebaseRTC!</h1>
 
+<script src="login.js">
+</script>
+
+<button onclick="googleLogin()">
+    Login with Google
+</button>
+
 <div class="slide" id="teacher">
     <img height="600" width="800" id="pic" src="slideExample.jpg" />
 </div>
