--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <!-- initialize the SDK after all desired features are loaded -->
     <script defer src="/__/firebase/init.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="newMain.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
 <h1>Welcome to FirebaseRTC!</h1>
