--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <!-- include only the Firebase features as you need -->
     <script defer src="/__/firebase/7.13.1/firebase-firestore.js"></script>
     <!-- initialize the SDK after all desired features are loaded -->
-    <script defer src='/__/firebase/init.js?useEmulator=true'></script>
+    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
 
     <script type="module" src="login.js"></script>
 
